--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:bottega-code-school/js-builder.git"
+    "url": "git+ssh://git@github.com/bottega-code-school/js-builder.git"
   },
   "keywords": [
     "es6",
@@ -32,9 +32,12 @@
   },
   "homepage": "https://github.com/bottega-code-school/js-builder",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "ajv": "6.12.0",
-    "axios": "0.21.1",
     "autoprefixer": "^9.1.0",
+    "axios": "^0.21.4",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
@@ -50,24 +53,24 @@
     "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.1.0",
-    "express": "4.17.1",
+    "express": "^4.18.2",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "moment": "2.29.4",
-    "node-sass": "^4.13.1",
     "postcss-loader": "^2.1.6",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-dropzone-component": "^3.2.0",
+    "react-modal": "^3.16.1",
     "react-redux": "7.2.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "redux": "4.0.5",
+    "sass": "^1.70.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "webpack": "4.42.1",
-    "webpack-cli": "3.3.11",
     "webpack-dev-middleware": "3.7.2",
     "webpack-dev-server": "3.10.3",
     "webpack-hot-middleware": "2.25.0",
@@ -79,6 +82,9 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "uglifyjs-webpack-plugin": "^1.2.7"
-  }
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
+  },
+  "main": "env.js"
 }
